fix: all remaining errors